--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="#" class="navbar-logo">Kopi<span>Candu</span>.</a>
 
       <div class="navbar-nav">
-        <a href="#">Home</a>
+        <a href="#home">Home</a>
         <a href="#">Tentang Kami</a>
         <a href="#">Menu</a>
         <a href="#">Contact</a>
@@ -37,6 +37,19 @@
     </nav>
 
     <!-- Navbar end -->
+
+    <!-- Hero Section Start -->
+    <section class="hero" id="home">
+      <main class="content">
+        <h1>Mari Nikmati Secangkir <span>Kopi</span>.</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo,
+          aperiam!
+        </p>
+        <a href="" class="cta">Beli Sekarang</a>
+      </main>
+    </section>
+    <!-- Hero Section End -->
 
     <!-- Feather Icon -->
     <script>
