--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
-        <a href="#">Tentang Kami</a>
+        <a href="#about">Tentang Kami</a>
         <a href="#">Menu</a>
         <a href="#">Contact</a>
       </div>
@@ -50,6 +50,30 @@
       </main>
     </section>
     <!-- Hero Section End -->
+
+    <!-- About Section Start -->
+    <section id="about" class="about">
+      <h2><span>Tentang</span> Kami</h2>
+
+      <div class="row">
+        <div class="about-img">
+          <img src="./img/tentang-kami.jpg" alt="Tentang Kami" />
+        </div>
+        <div class="content">
+          <h3>Kenapa Memilih Kami ?</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, soluta
+            impedit dolorem doloremque repudiandae perferendis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor
+            facere, ipsam voluptatibus ducimus velit natus autem nobis
+            exercitationem repellendus consequuntur?
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- About Section End -->
 
     <!-- Feather Icon -->
     <script>
